css/style.css
/* ... */
/* DESKTOP VERSION */
@media screen and (min-width: 768px){
    
    .sidebar {
        width: 120px;
        height: 100%;
        background: rgba(10, 10, 10, 0.65);
        box-shadow: 0 8px 32px rgb(2, 4, 24);
        border-right: 2px solid rgba(255, 255, 255, .09);
        transition: .4s ease-in-out;
        position: fixed;
    }

    .sidebar.open {
        width: 360px;
        background: rgba(10, 10, 10, 0.75);
    }

    .sidebar .nav-title {
        color: #dadada;
        margin: 10px 0 18px;
        padding: 0 0 0 30px;
        font-size: 26px;
        font-weight: 500;
        pointer-events: none;
        opacity: 0;
    }

    .sidebar.open .nav-title {
        opacity: 1;
        transition: .4s;
        transition-delay: .2s;
    }

    .sidebar nav {
        padding: 60px 30px 0 0;
    }

    .sidebar nav .nav-item {
        cursor: pointer;
        display: flex;
        align-items: center;
        justify-content: flex-start;
        border-radius: 4px;
        width: 100%;
        height: 56px;
        padding: 0 16px;
        margin: 8px 0;
        color: #fff;
        transition: .3s;
    }
    
    .sidebar nav .nav-item box-icon {
        font-size: 26px;
    }
    
    .sidebar nav .nav-item span {
        font-size: 18px;
        margin-left: 8px;
        opacity: 0;
        pointer-events: none;
    }
    
    .sidebar.open nav .nav-item span {
        opacity: 1;
        pointer-events: visible;
        transition: .4s;
        transition-delay: .2s;
    }

    .sidebar nav .nav-item:hover {
        background: rgba(255, 255, 255, .1);
    }

    .toggle {
        cursor: pointer;
        font-size: 38px;
        line-height: 50%;
        text-align: center;
        padding: 2px 0 2px 2px;
        background: rgba(255, 255, 255, 1);
        transition: .3s;
    }
    
    .toggle.open {
        background: rgb(255, 255, 255, .5);
        transition: .3s;
    }

    .sidebar .toggle box-icon {
        transition: .4s linear;
    }
    
    header {
        display: grid;
        align-items: center;
        justify-content: left;
    }

    header .toggle:hover{
        background: rgb(255, 255, 255, .7);
    }

    .search-nav {
        padding: 0;
        margin-left: 100px;
    }

    main {
        margin-top: 60px;
        margin-left: 120px;
        width: calc(100% - 120px);
    }
    
    main > article {
        margin-left: auto;
        margin-right: auto;
    }

    .solomobile {
        display: none;
    }
    
    .sidebar .notifications_number {
        position: absolute;
        top: 198px;
        right: 40px;
        width: 18px;
        height: 18px;
        border-radius: 50%;
        background: #ff2c74;
        color: #fff;
        line-height: 18px;
        font-family: sans-serif;
        text-align: center;
        font-size: 14px;
        transition: .5s !important;
    }
    
    .sidebar.open .notifications_number {
        top: 208px;
        right: 143px;
        width: 22px;
        height: 22px;
        line-height: 22px;
        font-size: 18px;
        transition: .5s !important;
    }

    .profileimages {
        background-color: white;
        border: 1px solid black;
        margin: 1.5% auto;
    }
    
    .profileimages img {
        width: 180px;
        height: 120px;
        object-fit: scale-down;
    }

    .profileimg {
        width: 280px;
        height: 210px;
        object-fit: scale-down;
    }

    .profileimagesnovotes {
        width: 200px;
        height: 140px;
        object-fit: scale-down;
        background-color: white;
        border: 1px solid black;
        margin: 0 1.5%;
    }

    main article header {
        width: 100%;
        margin-left: 1%;
        margin-top: .5%;
    }

    main article header img {
        width: 60px;
        height: 60px;
        object-fit: cover;
        border-radius: 50%;
        border: 1px solid rgba(0, 0, 0, .4);
        float: left;
        margin-right: 5%;
    }
    
    .headerpost a {
        margin: 1% 0;
        font-size: 18px;
    }
    
    .headerpost p {
        margin: 1% 0;
    }

    .ricercautente img {
        width: 60px;
        height: 60px;
        object-fit: cover;
        border-radius: 50%;
        border: 1px solid rgba(0, 0, 0, .4);
        margin-right: 5%;
    }

    .ricercacontainer {
        width: 45%;
    }

    main article > div > div {
        position: relative;
    }

    main article  label {
        position: absolute;
        top: 550%;
        left: 40%;
    }

    main article > div  div{
        display: inline;
    }

    .imgdescription {
        width: 80%;
        position: absolute;
        opacity: 0;
        bottom: 420%;
        left: 10%;
        background-color: #555;
        color: #eee;
        transition:all ease .4s;
        font-size: 15px;
        padding: 2px;
    }
    
    .divimgpost:hover .imgdescription {
        opacity: 90%;
        transition:all ease .4s;
    }
}

/* TABLET VERSION */
@media screen and (min-width: 768px) and (max-width: 1023.98px){

    main article img {
        margin: 2% 2% 10% 2%;
    }

    main article  label {
        top: 500%;
    }

    .imgdescription {
        bottom: 450%;
        font-size: 14px;
    }
}

/*LOGO*/
.icons {
    display: flex;
    flex-wrap: wrap;
    padding: 0.5% 5%;
}

.icons .icon {
    cursor: pointer;
    position: relative;
    width: 40px;
    height: 40px;
    margin: 10px;
    transition: .3s ease-out;
}

.icons .icon:hover {
    scale: 1.10;
}

.icons .icon .bg {
    position: absolute;
    top: -5px;
    right: -5px;
    background: linear-gradient(to right, #970DFA, rgb(191, 13, 250));
    width: 100%;
    height: 100%;
    border-radius: 30%;
    transform: rotate(14deg);
    transition: .3s ease-out;
}

.icons .icon:hover .bg {
    transform: rotate(24deg);
}
/* ... */

